--- a/locale/de_DE/LC_MESSAGES/homelibrary.po
+++ b/locale/de_DE/LC_MESSAGES/homelibrary.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-23 18:03+0200\n"
-"PO-Revision-Date: 2021-03-23 18:08+0200\n"
+"POT-Creation-Date: 2021-03-23 19:25+0200\n"
+"PO-Revision-Date: 2021-03-23 19:32+0200\n"
 "Last-Translator: Konstas <marmako@gmail.com>\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -142,3 +142,38 @@ msgstr "Seite"
 #: app/php/insert_author.php:66
 msgid "Bio"
 msgstr "Lebenslauf"
+
+#.
+#. firstname
+#. surname
+#. email
+#. site
+#. bio
+#.
+#: pages/newauthor.php:16
+msgid "New Author"
+msgstr "Neuer Schriftteller"
+
+#: pages/newauthor.php:19 pages/newauthor.php:20
+msgid "Author's Name"
+msgstr "Schrifttellers Name"
+
+#: pages/newauthor.php:24 pages/newauthor.php:25
+msgid "Author's Surname"
+msgstr "Schrifttellers Familiename"
+
+#: pages/newauthor.php:28 pages/newauthor.php:29
+msgid "Author's Email"
+msgstr "Schrifttellers Email"
+
+#: pages/newauthor.php:32 pages/newauthor.php:33
+msgid "Author's Site"
+msgstr "Schrifttellers Seite"
+
+#: pages/newauthor.php:36
+msgid "Author's Resume"
+msgstr "Schrifttellers Lebenslauf"
+
+#: pages/newauthor.php:37
+msgid "Author's resume"
+msgstr "Schrifttellers Lebenslauf"
